# storage/api-docs/api-docs.json
@@ -633,6 +633,47 @@
                 }
             }
         },
+        "/epaycopayment/update/{commerceId}": {
+            "get": {
+                "tags": [
+                    "EPaycoPayment"
+                ],
+                "summary": "Update a Transaction",
+                "description": "Return a Transaction After Update",
+                "operationId": "update",
+                "parameters": [
+                    {
+                        "name": "commerceId",
+                        "in": "path",
+                        "description": "Commerce Id",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    },
+                    {
+                        "name": "CustomerIdentification",
+                        "in": "query",
+                        "description": "Customer Identification",
+                        "required": false,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                }
+            }
+        },
         "/invoice/index": {
             "get": {
                 "tags": [
